--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
 
   </style>
 <h2 style="text-align: center;">ENGLISH</h2>
-<textarea  id = "input_txt" style="background-color:#02f3e5;
+<textarea  id = "input_txt" name="input_txt" #input_txt style="background-color:#02f3e5;
 border-radius:4px;
 font-size:16px;
 padding:15px;
@@ -26,7 +26,7 @@ width:600px;
 height:70px;
 margin-bottom: 50px;" placeholder="Write text">
 </textarea>
-<button  (click)="onClick()" id ="translate_btn" class="button button1" style="display: block;
+<button  (click)="onClick(input_txt.value)" id ="translate_btn" class="button button1" style="display: block;
 margin:auto; margin-bottom: 50px;">TRANSLATE</button>
 <h2 style=" text-align: center;">ESPAÑOL</h2>
 <textarea id="translate_txt" style="background-color:#02f3e5;
@@ -37,7 +37,7 @@ display: block;
 margin-top:50px;
 margin:auto;
 width:600px;
-height:70px;">
+height:70px;"> {{text}}
 </textarea>
 
 <router-outlet></router-outlet>
