--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@ display: block;
 margin:auto;
 width:600px;
 height:70px;
-margin-bottom: 50px;" placeholder={{input_text_placeholder}}>{{input_text}}
+margin-bottom: 50px;" placeholder={{input_text_placeholder}}>
 </textarea>
 <button  (click)="onClick(input_txt.value)" id ="translate_btn" class="button button1" style="display: block;
 margin:auto; margin-bottom: 40px;">TRANSLATE</button>
